shoppingapp/kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppingapp-simple
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Direct service routing
      - path: /signup
        pathType: Prefix
        backend:
          service:
            name: signup-svc
            port:
              number: 80
      
      - path: /signin
        pathType: Prefix
        backend:
          service:
            name: signin-svc
            port:
              number: 80
      
      # Frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
